Footer covering keyboard issue solved
Added a margin-bottom to body to prevent sticky footer from covering the last bit of content (keyboard specifically) on iPhone11.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
   background-color: rgb(75, 75, 75);
+  margin-bottom: 100px;
 }
 
 kbd {
